# example-grpc

./: .dockerignore  .gitignore  BuildProtobuf.dockerfile  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-image.yml  docker-publish.yml
app/: __init__.py  __main__.py
app/servicer/: __init__.py
app/servicer/echo/: __init__.py  echo.py  echostream.py
buildfiles/: app.service  app.spec  grpcio.spec
protofiles/: echo.proto  echo_pb2.py  echo_pb2.pyi  echo_pb2_grpc.py
