[tool.poetry]
name = "app"
version = "1.0.0"
description = ""
authors = ["jmarkin <me@jmarkin.ru>"]

packages = [{ include = "app" }, { include = "protofiles" }]

include = ["buildfiles/app.service"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
grpcio-tools = [
  { version = "~1.41.0", python = ">=3.7,<3.10" },
  { version = ">=1.42.0", python = ">=3.10" },
]
grpcio = [
  { version = "~1.41.0", python = ">=3.7,<3.10" },
  { version = ">=1.42.0", python = ">=3.10" },
]

[tool.poetry.dev-dependencies]
yapf = "^0.32.0"
toml = "^0.10.2"
mypy-protobuf = "^3.2.0"
poethepoet = "^0.13.1"

[tool.poe.tasks.run]
cmd = "python -m app"
help = "start app"


[tool.poe.tasks.protogen]
cmd = "python -m grpc_tools.protoc -I . --python_out=. --mypy_out=. --grpc_python_out=. protofiles/**/*.proto"
help = "Generate files from proto"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
